k8s-cluster-staging/deploy.uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
    suite: monitoring
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
        - name: uptime-kuma-data
          emptyDir: {}
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
          startupProbe:
            httpGet:
              path: /
              port: 3001
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 3001
      restartPolicy: Always
