k8s-cluster-staging/pod.forgejo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forgejo
  labels:
    app: forgejo
    git.akmalmaulana.net/forgejo: forgejo
spec:
  nodeSelector:
    kubernetes.io/hostname: pyroath-worker-node
  securityContext:
    fsGroup: 1000
  containers:
    - name: forgejo
      image: codeberg.org/forgejo/forgejo:16
      ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: ssh
          containerPort: 22
          protocol: TCP
      volumeMounts:
        - name: forgejo-data
          mountPath: /data
  volumes:
    - name: forgejo-data
      persistentVolumeClaim:
        claimName: forgejo-data-pvc
