k8s-cluster-staging/pod.l4d2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: survival-server
  labels:
    app: game-server
    l4d2.akmalmaulana.net/survival: survival-server
spec:
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
  nodeName: pyroath-worker-node
  volumes:
    - name: data-l4d2
      persistentVolumeClaim:
        claimName: pvc-l4d2
  containers:
    - name: survival-server
      image: akmalm007/l4d2:latest
      ports:
        - name: port-27015
          containerPort: 27015
          protocol: UDP
      volumeMounts:
        - name: data-l4d2
          mountPath: /home/steam/l4d2
