k8s-cluster-staging/sts.forgejo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  selector:
    matchLabels:
      app: myapp # has to match .spec.template.metadata.labels
  serviceName: "myapp"
  replicas: 3 # by default is 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: myapp
      labels:
        app: myapp # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: myapp
          image: myapp-slim:1.16.1
          ports:
            - containerPort: 80
              name: myapp
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        storageClassName: my-storage-class
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
