k8s-cluster-staging/pod.forgejo-action.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forgejo-action
  labels:
    app: forgejo-action
    git.akmalmaulana.net/forgejo-action: forgejo-action
    component: forgejo-runner
spec:
  nodeSelector:
    kubernetes.io/hostname: pyroath-worker-node
  securityContext:
    fsGroup: 1001
  containers:
    - name: forgejo-runner
      image: code.forgejo.org/forgejo/runner:13
      volumeMounts:
        - name: forgejo-action-data
          mountPath: /data
        - name: forgejo-action-config
          mountPath: /data/runner-config.yaml
          subPath: runner-config.yaml
      command: ["forgejo-runner", "daemon", "--config", "runner-config.yaml"]
    - name: docker-dind
      image: docker:dind
      command: ["dockerd", "-H", "tcp://0.0.0.0:2375", "--tls=false"]
      ports:
        - name: tcp
          containerPort: 2375
          protocol: TCP
      securityContext:
        privileged: true
  volumes:
    - name: forgejo-action-data
      persistentVolumeClaim:
        claimName: forgejo-action-data
    - name: forgejo-action-config
      configMap:
        name: forgejo-action-config
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-action
  labels:
    app: forgejo-action
    git.akmalmaulana.net/forgejo-action: forgejo-action
    component: forgejo-runner
spec:
  clusterIP: None
  selector:
    app: forgejo-action
  ports:
    - name: tcp
      protocol: TCP
      port: 2375
      targetPort: 2375
