k8s-cluster-staging/pod.postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forgejo-db
  labels:
    app: database
    git.akmalmaulana.net/forgejo: forgejo
    component: database
spec:
  nodeSelector:
    kubernetes.io/hostname: pyroath-worker-node
  securityContext:
    fsGroup: 1000
  containers:
    - name: forgejo
      image: codeberg.org/forgejo/forgejo:16
      ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: ssh
          containerPort: 22
          protocol: TCP
      volumeMounts:
        - name: forgejo-data
          mountPath: /data
    - name: forgejo-db
      image: postgres:18
      ports:
        - name: postgres
          containerPort: 5432
          protocol: TCP
      volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql
  volumes:
    - name: db-data
      persistentVolumeClaim:
        claimName: database-pvc
    - name: forgejo-data
      emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: database
    git.akmalmaulana.net/forgejo: forgejo
    component: database
spec:
  selector:
    app: database
  clusterIP: None
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-test
  labels:
    app: database
    git.akmalmaulana.net/forgejo: forgejo
    component: database
spec:
  selector:
    app: database
  type: NodePort
  ports:
    - name: postgres
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30005
---
