k8s-cluster-staging/svc.forgejo.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: 22
      protocol: TCP
