k8s-cluster-staging/svc.l4d2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-survival-server
spec:
  externalTrafficPolicy: Local
  type: NodePort
  selector:
    app: game-server
    l4d2.akmalmaulana.net/survival: survival-server
  ports:
    - name: port-27015
      protocol: UDP
      port: 27015
      targetPort: 27015
      nodePort: 30015
