k8s-cluster-staging/svc.personal-website.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
spec:
  type: ClusterIP
  selector:
    app: blog
    akmalmaulana.net/blog: personal-website
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
