k8s-cluster-staging/svc.uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  type: NodePort
  selector:
    app: uptime-kuma
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
