k8s-cluster-staging/gtw.gateway-staging.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: primary-gateway
  labels:
    suite: application
spec:
  gatewayClassName: envoy-gatewayclass
  listeners:
    - name: ssh
      port: 2222
      protocol: TCP
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-akmalmaulana-gg
