k8s-cluster-staging/httproute.forgejo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: primary-gateway
  hostnames:
    - "git.akmalmaulana.gg"
  rules:
    - backendRefs:
        - name: forgejo
          port: 3000
