k8s-cluster-staging/httproute.personal-website.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-website
spec:
  parentRefs:
    - name: primary-gateway
  hostnames:
    - blog.akmalmaulana.gg
  rules:
    - backendRefs:
        - name: personal-website
          port: 80
