k8s-cluster-staging/tcproute.forgejo.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: primary-gateway
  rules:
    - backendRefs:
        - name: forgejo
          port: 2222
